[notebooks] edmd and some misc stuff

--- a/docs/source/notebooks/dmd.ipynb
+++ b/docs/source/notebooks/dmd.ipynb
@@ -60,7 +60,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The standard DMD is sometimes also referred to as projected DMD <cite data-cite=\"tu2013dynamic\">(Tu, 2013)</cite> since the modes $\\hat\\varphi$ are eigenvectors of $\\mathbb{P}_XA$, where $\\mathbb{P}_X = UU^*$ is the orthogonal projection onto the image of $X$. If data vectors $y_i$ are in the $\\mathrm{span}\\{x_i\\}$, then $\\mathbb{P}_X = \\mathrm{Id}$; projected/standard and exact DMD modes coincide.\n",
+    "The standard DMD is sometimes also referred to as projected DMD <cite data-cite=\"nbdmd-tu2013dynamic\">(Tu, 2013)</cite> since the modes $\\hat\\varphi$ are eigenvectors of $\\mathbb{P}_XA$, where $\\mathbb{P}_X = UU^*$ is the orthogonal projection onto the image of $X$. If data vectors $y_i$ are in the $\\mathrm{span}\\{x_i\\}$, then $\\mathbb{P}_X = \\mathrm{Id}$; projected/standard and exact DMD modes coincide.\n",
     "\n",
     "This can be especially relevant if there are more dimensions than datapoints."
    ]
@@ -176,7 +176,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## EDMD"
+    "## Extended DMD\n",
+    "\n",
+    "For people already familiar with the method and interface, the [API docs](../api/generated/deeptime.decomposition.EDMD.rst).\n",
+    "\n",
+    "Similarly to DMD, extended DMD (EDMD) <cite data-cite=\"nbdmd-williams2015data\">(Williams, 2015)</cite> is a data-driven method to approximate the Koopman operator. The Koopman operator $\\mathcal{K}$ describes how an observable of an (potentially stochastic) dynamical system evolves in time. In a discrete-time setting with $x_{t+1} = T(x_t)$ and an observable $g$, the Koopman operator is defined as\n",
+    "\n",
+    "$$\n",
+    "(\\mathcal{K} g)(x) = g(T(x)).\n",
+    "$$\n",
+    "\n",
+    "Given observation data $X$ and $Y$, where $y_i = T(x_i)$ and a basis set of functions or observables\n",
+    "\n",
+    "$$\n",
+    "B = \\{ \\psi_1,\\psi_2,\\ldots,\\psi_k \\},\n",
+    "$$\n",
+    "\n",
+    "one can define the transformed data $\\Psi_X$ and $\\Psi_Y$ with \n",
+    "\n",
+    "$$(\\Psi_*)_i = (\\psi_1(*_i),\\ldots, \\psi_k(*_i))^\\top, $$\n",
+    "\n",
+    "yielding\n",
+    "\n",
+    "$$\n",
+    "\\Psi_Y^\\top = \\Psi_X^\\top K.\n",
+    "$$\n",
+    "\n",
+    "Here, $K^\\top\\in\\mathbb{R}^{k\\times k}$ acting from the left is the projection of the true Koopman operator $\\mathcal{K}$ into the basis $B$.\n",
+    "\n",
+    "Usually one performs rank-truncation or has over-/underdetermined systems. In such cases, $K$ is determined via the pseudo-inverse $K=\\Psi_Y\\Psi_X^\\dagger$.\n",
+    "\n",
+    "In case of a basis $B$ which just contains the identity, EDMD reduces back to DMD."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To demonstrate EDMD and deeptime's API, we consider a [two-dimensional triple-well potential](../api/generated/deeptime.data.triple_well_2d.rst#deeptime.data.triple_well_2d) <cite data-cite=\"nbdmd-schutte2013metastability\">(Schütte, 2013)</cite>. It is defined on $[-2,2]\\times [-1, 2]$ and looks like the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.linspace(-2, 2, num=100)\n",
+    "y = np.linspace(-1, 2, num=100)\n",
+    "XX, YY = np.meshgrid(x, y)\n",
+    "V = 3*np.exp(-(XX**2) - (YY - 1/3)**2) - 3*np.exp(-XX**2 - (YY - 5/3)**2) \\\n",
+    "    - 5*np.exp(-(XX-1)**2 - YY**2) - 5*np.exp(-(XX+1)**2 - YY**2) \\\n",
+    "    + (2/10)*XX**4 + (2/10)*(YY-1/3)**4\n",
+    "\n",
+    "plt.contourf(x, y, V, levels=np.linspace(-4.5, 4.5, 20), cmap='coolwarm');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inside this potential landscape we integrate particles subject to the stochastic differential equation\n",
+    "\n",
+    "$$ \\mathrm{d}X_t = \\nabla V(X_t) \\mathrm{d}t + \\sigma(t, X_t)\\mathrm{d}W_t $$\n",
+    "\n",
+    "with $\\sigma=1.09$, using an Euler-Maruyama integrator."
    ]
   },
   {
@@ -187,7 +253,18 @@
    "source": [
     "import deeptime as dt\n",
     "\n",
-    "import deeptime.data._data_bindings as bd"
+    "system = dt.data.triple_well_2d()\n",
+    "traj = system.trajectory(x0=[[-1, 0]], n_evaluations=200, seed=66)\n",
+    "\n",
+    "plt.contourf(x, y, V, levels=np.linspace(-4.5, 4.5, 20), cmap='coolwarm')\n",
+    "plt.plot(*traj.T, c='black', lw=.5);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To approximate the Koopman operator, we first select 25000 random points inside the domain and integrate them for 10000 steps under an integration step of $h=10^{-5}$:"
    ]
   },
   {
@@ -196,7 +273,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    ".1/1e-5"
+    "N = 25000\n",
+    "X = np.stack([np.random.uniform(-2, 2, size=(N,)), np.random.uniform(-1, 2, size=(N,))]).T\n",
+    "Y = system(X, n_jobs=8)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we pick a basis $B$ to be all monomials up to and including degree $\\mathrm{deg}=10$."
    ]
   },
   {
@@ -205,7 +291,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tw = bd.TripleWell2D()"
+    "basis = dt.basis.Monomials(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using this basis, we can fit an EDMD estimator and obtain the corresponding model."
    ]
   },
   {
@@ -214,55 +307,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 55000\n",
-    "X = np.stack([np.random.uniform(-2, 2, size=(N,)), np.random.uniform(-1, 2, size=(N,))]).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(X.shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y = tw(X, n_threads=8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "basis = dt.basis.Monomials(10)\n",
-    "edmd_estimator = dt.decomposition.EDMD(basis, n_eigs=None)\n",
+    "edmd_estimator = dt.decomposition.EDMD(basis, n_eigs=8)\n",
     "edmd_model = edmd_estimator.fit((X, Y)).fetch_model()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "edmd_model.eigenvalues.shape"
+    "We can obtain the dominant eigenvalues associated to processes in the system."
    ]
   },
   {
@@ -271,25 +324,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(np.real(edmd_model.eigenvalues), 'x')"
+    "plt.plot(np.real(edmd_model.eigenvalues), 'x')\n",
+    "plt.title('Dominant eigenvalues');"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "edmd_model.modes.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "edmd_model.basis(X).shape"
+    "We project our input data $X$ using the eigenfunctions:"
    ]
   },
   {
@@ -306,6 +349,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "And visualize the first four eigenfunctions. They contain information about metastable regions and slow transitions."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -315,20 +365,27 @@
     "gs = fig.add_gridspec(ncols=2, nrows=2)\n",
     "\n",
     "ax = fig.add_subplot(gs[0, 0])\n",
-    "ax.scatter(*X.T, c=phi[:, 0])\n",
-    "ax.set_title('1st eigenfunction')\n",
-    "\n",
-    "ax = fig.add_subplot(gs[0, 1])\n",
-    "ax.scatter(*X.T, c=phi[:, 1])\n",
+    "ax.scatter(*X.T, c=phi[:, 1], cmap='coolwarm')\n",
     "ax.set_title('2nd eigenfunction')\n",
     "\n",
-    "ax = fig.add_subplot(gs[1, 0])\n",
-    "ax.scatter(*X.T, c=phi[:, 2])\n",
+    "ax = fig.add_subplot(gs[0, 1])\n",
+    "ax.scatter(*X.T, c=phi[:, 2], cmap='coolwarm')\n",
     "ax.set_title('3rd eigenfunction')\n",
     "\n",
+    "ax = fig.add_subplot(gs[1, 0])\n",
+    "ax.scatter(*X.T, c=phi[:, 3], cmap='coolwarm')\n",
+    "ax.set_title('4th eigenfunction')\n",
+    "\n",
     "ax = fig.add_subplot(gs[1, 1])\n",
-    "ax.scatter(*X.T, c=phi[:, 3])\n",
-    "ax.set_title('4th eigenfunction');"
+    "ax.scatter(*X.T, c=phi[:, 4], cmap='coolwarm')\n",
+    "ax.set_title('5th eigenfunction');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using a clustering can reveal temporally coherent structures."
    ]
   },
   {
@@ -337,32 +394,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "phi.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pp = phi[..., :8]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kmeans = dt.clustering.Kmeans(n_clusters=3, n_jobs=4).fit(np.real(pp)).fetch_model()\n",
-    "c = kmeans.transform(np.real(pp))\n",
+    "kmeans = dt.clustering.Kmeans(n_clusters=5, n_jobs=4).fit(np.real(phi)).fetch_model()\n",
+    "c = kmeans.transform(np.real(phi))\n",
     "\n",
     "f, (ax1, ax2) = plt.subplots(1, 2, figsize=(12, 6))\n",
     "ax1.scatter(*X.T, c=c)\n",
+    "ax1.set_title(r\"$t = 0$\")\n",
     "ax1.set_aspect('equal')\n",
+    "ax1.set_xlim([-2.5, 2.5])\n",
+    "ax1.set_ylim([-1.5, 2.5])\n",
+    "ax1.contour(x, y, V, levels=np.linspace(-4.5, 4.5, 20), colors='black')\n",
+    "\n",
     "ax2.scatter(*Y.T, c=c)\n",
-    "ax2.set_aspect('equal')"
+    "ax2.set_title(r\"$t = 0.1$\")\n",
+    "ax2.set_aspect('equal')\n",
+    "ax2.set_xlim([-2.5, 2.5])\n",
+    "ax2.set_ylim([-1.5, 2.5])\n",
+    "ax2.contour(x, y, V, levels=np.linspace(-4.5, 4.5, 20), colors='black');"
    ]
   },
   {
