--- a/docs/source/notebooks/kedmd.ipynb
+++ b/docs/source/notebooks/kedmd.ipynb
@@ -72,8 +72,8 @@
     "x0 = np.zeros((1, 2)) # inital condition\n",
     "n = 10000 # number of evaluations of the  discretized dynamical system with lag time tau\n",
     "\n",
-    "f = dt.data.quadruple_well(n_steps=n_steps, seed=42)  # loading the model\n",
-    "traj = f.trajectory(x0, n)\n",
+    "f = dt.data.quadruple_well(n_steps=n_steps)  # loading the model\n",
+    "traj = f.trajectory(x0, n, seed=42)\n",
     "\n",
     "plt.hist2d(*traj.T, range=[[-2, 2], [-2, 2]], bins=50, density=True)\n",
     "plt.colorbar()"
@@ -95,7 +95,7 @@
     "m = 2500 # number of training data points\n",
     "X = np.random.uniform(-2, 2, size=(2500, 2)) # training data\n",
     "# X = 4*np.random.rand(2, m)-2 \n",
-    "Y = f(X) # training data mapped forward by the dynamical system"
+    "Y = f(X, seed=42, n_jobs=1) # training data mapped forward by the dynamical system"
    ]
   },
   {
