--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -603,3 +603,10 @@
  year    = {2010},
  doi     = {10.1063/1.3502450},
 }
+@book{schutte2013metastability,
+  title={Metastability and Markov State Models in Molecular Dynamics},
+  author={Sch{\"u}tte, Christof and Sarich, Marco},
+  volume={24},
+  year={2013},
+  publisher={American Mathematical Soc.}
+}
