--- a/docs/source/references.bib
+++ b/docs/source/references.bib
@@ -610,3 +610,11 @@
   year={2013},
   publisher={American Mathematical Soc.}
 }
+@incollection{arnold1966topology,
+  title={On the topology of three-dimensional steady flows of an ideal fluid},
+  author={Arnold, Vladimir I},
+  booktitle={Vladimir I. Arnold-Collected Works},
+  pages={25--28},
+  year={1966},
+  publisher={Springer}
+}
